Modificari la day. Imi afiseaza toate evenimentele dintr-o zi, dar nu la ora la care trebuie Asta mai trebuie facut